# TrumpPlus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  staging_smoke_report.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase_1_1_review_state.py  0003_phase_1_2_render_packages.py  0004_phase_1_3_final_videos.py  0005_phase_1_4_platform_packages.py  0006_phase_1_5_source_review.py  0007_phase_1_6_evidence_pack.py  0008_phase_1_9_evidence_candidates.py  0009_phase_2_0_editorial_calendar.py  0010_phase_2_2_roles_permissions.py  0011_phase_2_3_security_hardening.py  0012_phase_2_4_workspace_auth_readiness.py  0013_phase_2_5_evidence_first_gate.py
app/: config.py  db.py  llm.py  main.py  models.py  queue.py  scheduler.py
app/adapters/: truth_dedup.py  truth_downloader.py  truth_fetcher.py  truth_intake_bridge.py
app/api/: routes.py
app/auth/: context.py  current_user.py
app/config/: approval_policy.yaml  (+8 more)
data/: public_archive_sample.json  sample_evidence.json  sample_posts.json
deploy/: truth-monitor.service
docs/: FIRST_SAMPLE_CHECKLIST.md  PILOT_PRODUCTION_SOP.md  TRUTH_MONITOR.md  permissions_matrix.md
remotion/: README.md  sample_manifest.json
schemas/: brief_export.schema.json  render_manifest.schema.json  safety_review.schema.json  video_asset.schema.json
scripts/: create_pilot_input.py  pilot_run.py  staging_smoke.py  truth_approve_and_run.sh  truth_dryrun.py
storage/: db.py
tests/: conftest.py  test_api.py  test_truth_monitor_e2e.py
(+85 files in other folders)
